Option page: added

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .menu-bar {
-    @apply p-1 shadow-inner border rounded-sm hover:bg-slate-100/50;
+    @apply px-3 py-1 shadow-inner border rounded-sm hover:bg-slate-100/50;
 }
 .task-bar {
     @apply p-2 border rounded-sm flex items-center hover:bg-gray-800 hover:text-white justify-center;
